Fixed alignment

--- a/src/components/ToDoTile/ToDoTile.module.css
+++ b/src/components/ToDoTile/ToDoTile.module.css
@@ -1,6 +1,7 @@
 .checkboxAndToDoTileWrapper {
 	display: flex;
 	margin-top: 8px;
+	align-items: center;
 }
 
 .checkboxWrapper {
